aditional images and content changes

--- a/about.html
+++ b/about.html
@@ -11,8 +11,10 @@
 <body>
   <div class="sticky-top">
     <header>
-      <p>Najboljša kavna storitev v Mariboru | <a href="#">Pokliči nas: +386 40 123 456</a></p>
-    </header>
+      <p>
+        Želite oddati naročilo? <strong>Pišite nam</strong> |
+        <a href="mailto:perosa@mail.com">perosa@mail.com <i class="fa fa-envelope" aria-hidden="true"></i></a>
+      </p>    </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -65,36 +67,47 @@
         <div class="col-lg-12 text-center mb-5">
           <h1 class="display-4 about-title">O Podjetju</h1>
         </div>
+        <div class="col-lg-12 mb-4">
+          <div class="feature-box d-flex align-items-center p-4">
+            <div class="feature-icon mr-4">
+              <i class="fas fa-cogs"></i>
+            </div>
+            <div class="feature-content">
+              <h3 class="feature-title h5">NAŠE STORITVE</h3>
+              <p>LUSSO caffè - Systeme je vaš partner za vrhunsko kavo, čaj in dodatke – z <strong>individualnim svetovanjem</strong> in <strong>osebno podporo na mestu</strong>!</p>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-6 mb-4">
           <div class="feature-box d-flex align-items-center p-4">
             <div class="feature-icon mr-4">
               <i class="fas fa-coffee"></i>
             </div>
             <div class="feature-content">
-              <h3 class="feature-title h5">Specializacija</h3>
-              <p>Specializirani smo za <strong>espresso kavne aparate</strong>, mline za kavo, mehčalce vode, pomivalne stroje in ledomate. Nudimo celovite rešitve za vaše potrebe po kavi.</p>
+              <h3 class="feature-title h5">PRAŽENJE KAVE</h3>
+              <p>Naš mojster praženja vsak dan pripravi <strong>individualno sveže praženo kavo</strong>. Kupujemo samo izbrane, najboljše sorte surove zelene kave iz najboljših pridelovalnih območij na svetu, da bi lahko ponudili kavo najvišje kakovosti.</p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 mb-4">
           <div class="feature-box d-flex align-items-center p-4">
             <div class="feature-icon mr-4">
-              <i class="fas fa-tools"></i>
+              <i class="fas fa-location-arrow"></i>
             </div>
             <div class="feature-content">
-              <h3 class="feature-title h5">Vzdrževanje</h3>
-              <p>Nudimo montaže in <strong>vzdrževanje točilne tehnike</strong> (šankomatov), sistemov za alkoholne in brezalkoholne pijače, pivskih in vinskih sistemov ter sistemov za žgane pijače.</p>
+              <h3 class="feature-title h5">LUSSO caffè NA MESTU</h3>
+              <p>Vaše individualne skrbi so osnova naših konceptov uspeha. Z vami smo, da ugotovimo vaše potrebe in skupaj z vami razvijemo rešitve po meri. Naša ekipa je na poti k vam!</p>
             </div>
           </div>
         </div>
         <div class="col-lg-6 mb-4">
           <div class="feature-box d-flex align-items-center p-4">
             <div class="feature-icon mr-4">
-              <i class="fas fa-handshake"></i>
+              <i class="fas fa-headset"></i>
             </div>
             <div class="feature-content">
-              <h3 class="feature-title h5">Partnerstvo</h3>
-              <p>Naš interes je dolgoročno partnerstvo in sodelovanje. <strong>Ponujamo rešitve po meri</strong> in v vaše zadovoljstvo, da skupaj dosežemo uspeh.</p>
+              <h3 class="feature-title h5">LUSSO caffè NASVET</h3>
+              <p>Če imate kakršne koli pomisleke, so vam naši zaposleni na voljo po telefonu, da vam zagotovijo <strong>kompetenten in oseben nasvet</strong>. Hitro in zanesljivo!</p>
             </div>
           </div>
         </div>
@@ -104,8 +117,19 @@
               <i class="fas fa-truck"></i>
             </div>
             <div class="feature-content">
-              <h3 class="feature-title h5">Hitra Popravila</h3>
-              <p>Popravila izvajamo tako pri vas kot v naši delavnici. <strong>Naš odzivni čas je hiter</strong>, kar zagotavlja minimalne motnje v vašem poslovanju.</p>
+              <h3 class="feature-title h5">DOSTAVNA EKIPA LUSSO caffè</h3>
+              <p>Naši svetovalci za stranke so na poti po vsej Sloveniji za vas. Oskrbijo vas s <strong>sveže praženo kavo</strong> in drugimi izdelki iz naše ponudbe. Prejeli boste tudi informacije o ponudbah in še veliko več. Individualna storitev in strokovno znanje o izdelkih tudi pri dostavi!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mb-4">
+          <div class="feature-box d-flex align-items-center p-4">
+            <div class="feature-icon mr-4">
+              <i class="fas fa-tools"></i>
+            </div>
+            <div class="feature-content">
+              <h3 class="feature-title h5">TEHNIČNA EKIPA LUSSO caffè</h3>
+              <p>LUSSO caffè sodeluje z vodilnimi svetovnimi znamkami espresso aparatov in kavnih mlinčkov. Naša tehnična ekipa bo na zahtevo z veseljem zagotovila storitve <strong>popravila in servisiranja</strong> najpogostejših kavnih strojev. Naši pogoji vključujejo dinamičen delovni čas, najemnino, montažo in demontažo. Profesionalno in hitro!</p>
             </div>
           </div>
         </div>
@@ -129,7 +153,7 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="service-box text-center p-4">
-            <h4 class="service-title h5"><i class="fas fa-wind mr-2"></i>Čiščenje stekla</h4>
+            <h4 class="service-title h5"><i class="fas fa-window-maximize mr-2"></i>Čiščenje stekla</h4>
             <p>Profesionalni pripomočki za <strong>čiščenje steklenih površin</strong>, ki zagotavljajo brezhiben sijaj.</p>
           </div>
         </div>
@@ -144,12 +168,14 @@
         <div class="col-lg-12 text-center">
           <h2 class="about-contact-title h4 mb-4">Kontaktirajte Nas</h2>
           <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
-          <p><i class="fas fa-phone-alt mr-2"></i>Tel. št.: +386 40 568 073</p>
           <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com" class="about-email">pavelperosa@gmail.com</a></p>
+          <a href="contact.html" class="btn btn-secondary" style="border-radius: 5px; margin-top: 10px;">Kontaktirajte nas</a>
         </div>
       </div>
     </section>
   </main>
+
+
 
   <footer class="bg-dark text-white text-center py-4">
     <div class="container">
