--- a/kava.html
+++ b/kava.html
@@ -67,8 +67,10 @@
 <body>
   <div class="sticky-top">
     <header>
-      <p>Najboljša kavna storitev v Mariboru | <a href="#">Pokliči nas: +386 40 123 456</a></p>
-    </header>
+      <p>
+        Želite oddati naročilo? <strong>Pišite nam</strong> |
+        <a href="mailto:perosa@mail.com">perosa@mail.com <i class="fa fa-envelope" aria-hidden="true"></i></a>
+      </p>    </header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -136,25 +138,15 @@
         </div>
         <div class="col-md-6 order-md-1 d-flex flex-column justify-content-center text-content">
           <h3 class="product-title">Lusso Kava v Zrnu</h3>
-          <p class="product-description"><span style="color: #6f4e37; font-weight: bold;">Mešanica pražene kave z odličnim telesom in kremastostjo.</span> Mešanica najboljše arabice in robuste za resnično uravnoteženo in aromatično skodelico.</p>
+          <p class="product-description">LUSSO caffè je kava za gostince, odlične mešanice Arabice in
+            Robuste, ki vas očara s čokoladnim okusom ter krepko kremasto
+            kremo s pridihom lešnikov. Njeno uživanje vam pričara eksplozijo
+            razkošja okusov.</p>
           <!-- <p class="product-price"><strong>1 kg: 19,99 € brez DDV</strong></p>
           <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 50 € znotraj SI</em></p> -->
         </div>
       </div>
 
-      <!-- Product Display: Lusso Espresso Caffe -->
-      <div class="row mb-5 align-items-center product-display">
-        <div class="col-md-6">
-          <img src="images/kava-zrno/Kava-zrno2.jpg" class="img-fluid" alt="Lusso Espresso Caffe">
-        </div>
-        <div class="col-md-6 d-flex flex-column justify-content-center text-content">
-          <h3 class="product-title">Lusso Espresso Caffe</h3>
-          <p class="product-description"><span style="color: #6f4e37; font-weight: bold;">Mešanica Lusso Caffè je rezultat kombinacije edinstvenih in neponovljivih dejavnikov.</span> Neindustrijski proizvodni proces, ki omogoča delo na zahtevo, s čimer se zmanjša čas med praženjem, pakiranjem in dostavo. Zagotovljena je svežina in kakovost naše kave.</p>
-          <!-- <p class="product-price"><strong>1 kg: 21,99 € brez DDV</strong></p>
-          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 50 € znotraj SI</em></p> -->
-        </div>
-      </div>
-    </section>
 
     <section id="ground-coffee-products" class="my-5">
       <div class="text-center mb-5">
