--- a/cistila.html
+++ b/cistila.html
@@ -1,150 +1,241 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <title>Čistila - Peroša</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <div class="sticky-top">
-      <header>
-        <p>Najboljša kavna storitev v Mariboru | <a href="#">Pokliči nas: +386 40 123 456</a></p>
-      </header>
-  
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container justify-content-center">
-          <a class="navbar-brand" href="index.html">
-            <img class="Logo-image" src="logo.png" alt="Peroša Lusso Logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Domov</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">O Nas</a>
-              </li>
-  
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Izdelki
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="kava.html">Kava</a>
-                  <a class="dropdown-item" href="cialde.html">Cialde</a>
-                  <a class="dropdown-item" href="cistila.html">Čistila</a>
-                  <a class="dropdown-item" href="skodelice.html">Skodelice</a>
-                </div>
-              </li>
-  
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt</a>
-              </li>
-              <li class="nav-item"><a href="servis.html" class="nav-link">Servis</a>
-              </li>
-              <li class="nav-item"><a href="produkti.html" class="nav-link">Gostinska oprema</a>
-              </li>
-            </ul>
-          </div>
+<html lang="sl">
+
+<head>
+  <title>Čistila - Peroša</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+    /* Glavni stil za besedilo */
+    .text-gold {
+      color: #d4af37;
+    }
+
+    .textcolor {
+      color: #d4af37;
+    }
+
+    .hero-section {
+      background: #f9f9f9;
+      padding: 50px 0;
+      border-radius: 10px;
+    }
+
+    .horizontal-card {
+      border: none;
+      transition: transform 0.3s ease;
+    }
+
+    .horizontal-card:hover {
+      transform: translateY(-10px);
+    }
+
+    .card-title {
+      font-weight: 500;
+    }
+
+    .card-img {
+      object-fit: cover;
+      height: 100%;
+    }
+
+    .shadow-sm {
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+  </style>
+</head>
+
+<body>
+  <div class="sticky-top"></div>
+    <header>
+      <p>
+        Želite oddati naročilo? <strong>Pišite nam</strong> |
+        <a href="mailto:perosa@mail.com">perosa@mail.com <i class="fa fa-envelope" aria-hidden="true"></i></a>
+      </p>
+    </header>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container justify-content-center">
+        <a class="navbar-brand" href="index.html">
+          <img class="Logo-image" src="logo.png" alt="Peroša Lusso Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Domov</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">O Nas</a>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Izdelki
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="kava.html">Kava</a>
+                <a class="dropdown-item" href="cialde.html">Cialde</a>
+                <a class="dropdown-item" href="cistila.html">Čistila</a>
+                <a class="dropdown-item" href="skodelice.html">Skodelice</a>
+              </div>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Kontakt</a>
+            </li>
+            <li class="nav-item"><a href="servis.html" class="nav-link">Servis</a>
+            </li>
+            <li class="nav-item"><a href="produkti.html" class="nav-link">Gostinska oprema</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+  </div>
+  <!-- Hero Section -->
+  <section class="container my-5 hero-section">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h1 class="textcolor">Čistila Peroša</h1>
+        <p class="lead">Odkrijte našo linijo čistil in pripomočkov za čiščenje.</p>
+        <hr class="my-4">
+        <p>Naša ponudba čistil vključuje rešitve za profesionalno uporabo</p>
+      </div>
     </div>
+  </section>
 
-    <section class="container my-5">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h1>Čistila Peroša</h1>
-          <p class="lead">Odkrijte našo vrhunsko linijo čistil in pripomočkov za čiščenje.</p>
-          <hr class="my-4">
-          <p>**1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="container my-5">
-      <h2 class="text-center mb-4">Profesionalna čistila</h2>
-      <div class="row">
-        <div class="col-md-6 offset-md-3">
-          <img src="images/cleaning-oprema.jpg" class="img-fluid mb-4" alt="Profesionalna čistila">
-          <p>**2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="container my-5">
-      <h2 class="text-center mb-4">Vozički in pripomočki za čiščenje</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/janitor-cart.jpg" class="img-fluid mb-4" alt="Vozički za čiščenje">
-        </div>
-        <div class="col-md-6">
-          <p>**3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="container my-5">
-      <h2 class="text-center mb-4">Papir in podajalniki</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <p>**4. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-        <div class="col-md-6">
-          <img src="bokkpaper.jpg" class="img-fluid mb-4" alt="Papir in podajalniki">
-        </div>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 text-left">
-            <h4 class="footer-title">Hitre Povezave</h4>
-            <ul class="footer-links">
-              <li><a href="index.html" class="footer-link">Domov</a></li>
-              <li><a href="about.html" class="footer-link">O Nas</a></li>
-              <li><a href="products.html" class="footer-link">Izdelki</a></li>
-              <li><a href="cialde.html" class="footer-link">Cialde</a></li>
-              <li><a href="contact.html" class="footer-link">Kontakt</a></li>
-            </ul>
-          </div>
-          <div class="col-md-6 text-left contact-info">
-            <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
-            <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
-            <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
-            <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com" class="footer-link-mail">pavelperosa@gmail.com</a></p>
-          </div>
-        </div>
-        <div class="row mt-3">
-          <div class="col-md-12 text-center">
-            <div class="social-icons">
-              <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
-              <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
-              <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+  <!-- Product Cards Section -->
+  <section class="container my-5">
+    <h2 class="text-center mb-5 text-gold">Profesionalna čistila</h2>
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <div class="card horizontal-card shadow-sm">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <img src="images/cleaning-oprema.jpg" class="card-img" alt="Čistila za talne površine">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-gold">Čistila za talne površine</h5>
+                <p class="card-text">Učinkovita in varna čistila za vse vrste talnih površin, ki odstranijo umazanijo in zagotavljajo sijaj.</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
-      <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
-    </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+
+      <div class="col-md-6 mb-4">
+        <div class="card horizontal-card shadow-sm">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <img src="images/janitor-cart.jpg" class="card-img" alt="Vozički za čiščenje">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-gold">Vozički za čiščenje</h5>
+                <p class="card-text">Praktični in robustni vozički za enostavno organizacijo in transport čistilnih pripomočkov.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Additional Products Section -->
+  <section class="container my-5">
+    <h2 class="text-center mb-5 text-gold">Papir in podajalniki</h2>
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <div class="card horizontal-card shadow-sm">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <img src="bokkpaper.jpg" class="card-img" alt="Papir in podajalniki">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-gold">Papir in podajalniki</h5>
+                <p class="card-text">Širok izbor papirja in podajalnikov, ki zagotavljajo čistočo in udobje v vseh prostorih.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 mb-4">
+        <div class="card horizontal-card shadow-sm">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <img src="cistilo-roke.jpg" class="card-img" alt="Razkužila za roke">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-gold">Razkužila za roke</h5>
+                <p class="card-text">Zanesljiva in učinkovita razkužila za roke, primerna za uporabo v vseh vrstah javnih in zasebnih prostorov.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="bg-dark text-white text-center py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 text-left">
+          <h4 class="footer-title">Hitre Povezave</h4>
+          <ul class="footer-links">
+            <li><a href="index.html" class="footer-link">Domov</a></li>
+            <li><a href="about.html" class="footer-link">O Nas</a></li>
+            <li><a href="products.html" class="footer-link">Izdelki</a></li>
+            <li><a href="cialde.html" class="footer-link">Cialde</a></li>
+            <li><a href="contact.html" class="footer-link">Kontakt</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 text-left contact-info">
+          <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
+          <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
+          <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
+          <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com"
+              class="footer-link-mail">pavelperosa@gmail.com</a></p>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-md-12 text-center">
+          <div class="social-icons">
+            <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
+    <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
